@@ -23,168 +23,192 @@ class CQL3HelpTopics(object):
         return getattr(self, 'help_' + topic.lower())()
 
     def help_types(self):
-        return 'types'
+        return 'types.html'
 
     def help_timestamp(self):
-        return 'usingtimestamps'
+        return 'types.html#working-with-timestamps'
 
     def help_date(self):
-        return 'usingdates'
+        return 'types.html#working-with-dates'
 
     def help_time(self):
-        return 'usingtime'
+        return 'types.html#working-with-times'
+
+    def help_duration(self):
+        return 'types.html#working-with-durations'
+
+    def help_map(self):
+        return 'types.html#maps'
+
+    def help_set(self):
+        return 'types.html#sets'
+
+    def help_list(self):
+        return 'types.html#lists'
 
     def help_blob(self):
-        return 'constants'
+        return 'definitions.html#constants'
 
     def help_uuid(self):
-        return 'constants'
+        return 'definitions.html#constants'
 
     def help_boolean(self):
-        return 'constants'
+        return 'definitions.html#constants'
 
     def help_int(self):
-        return 'constants'
+        return 'definitions.html#constants'
 
     def help_counter(self):
-        return 'counters'
+        return 'types.html#counters'
 
     def help_text(self):
-        return 'constants'
+        return 'definitions.html#constants'
     help_ascii = help_text
 
+    def help_tuple(self):
+        return 'types.html#tuples'
+
     def help_use(self):
-        return 'useStmt'
+        return 'ddl.html#use'
 
     def help_insert(self):
-        return 'insertStmt'
+        return 'dml.html#insert'
 
     def help_update(self):
-        return 'updateStmt'
+        return 'dml.html#update'
 
     def help_delete(self):
-        return 'deleteStmt'
+        return 'dml.html#delete'
 
     def help_select(self):
-        return 'selectStmt'
+        return 'dml.html#select'
 
     def help_json(self):
-        return 'json'
+        return 'json.html'
 
     def help_select_json(self):
-        return 'selectJson'
+        return 'json.html#select-json'
 
     def help_insert_json(self):
-        return 'insertJson'
+        return 'json.html#insert-json'
 
     def help_batch(self):
-        return 'batchStmt'
+        return 'dml.html#batch'
     help_begin = help_batch
     help_apply = help_batch
 
     def help_create_keyspace(self):
-        return 'createKeyspaceStmt'
+        return 'ddl.html#create-keyspace'
 
     def help_alter_keyspace(self):
-        return 'alterKeyspaceStmt'
+        return 'ddl.html#alter-keyspace'
 
     def help_drop_keyspace(self):
-        return 'dropKeyspaceStmt'
+        return 'ddl.html#drop-keyspace'
 
     def help_create_table(self):
-        return 'createTableStmt'
+        return 'ddl.html#create-table'
     help_create_columnfamily = help_create_table
 
     def help_alter_table(self):
-        return 'alterTableStmt'
+        return 'ddl.html#alter-table'
 
     def help_drop_table(self):
-        return 'dropTableStmt'
+        return 'ddl.html#drop-table'
     help_drop_columnfamily = help_drop_table
 
     def help_create_index(self):
-        return 'createIndexStmt'
+        return 'indexes.html#create-index'
 
     def help_drop_index(self):
-        return 'dropIndexStmt'
+        return 'indexes.html#drop-index'
 
     def help_truncate(self):
-        return 'truncateStmt'
+        return 'ddl.html#truncate'
 
     def help_create_type(self):
-        return 'createTypeStmt'
+        return 'types.html#creating-a-udt'
 
     def help_alter_type(self):
-        return 'alterTypeStmt'
+        return 'types.html#altering-a-udt'
 
     def help_drop_type(self):
-        return 'dropTypeStmt'
+        return 'types.html#dropping-a-udt'
 
     def help_create_function(self):
-        return 'createFunctionStmt'
+        return 'functions.html#create-function'
 
     def help_drop_function(self):
-        return 'dropFunctionStmt'
+        return 'functions.html#drop-function'
 
     def help_functions(self):
-        return 'functions'
+        return 'functions.html'
 
     def help_create_aggregate(self):
-        return 'createAggregateStmt'
+        return 'functions.html#create-aggregate'
 
     def help_drop_aggregate(self):
-        return 'dropAggregateStmt'
+        return 'functions.html#drop-aggregate'
 
     def help_aggregates(self):
-        return 'aggregates'
+        return 'functions.html#aggregate-functions'
 
     def help_create_trigger(self):
-        return 'createTriggerStmt'
+        return 'triggers.html#create-trigger'
 
     def help_drop_trigger(self):
-        return 'dropTriggerStmt'
+        return 'triggers.html#drop-trigger'
 
     def help_create_materialized_view(self):
-        return 'createMVStmt'
+        return 'mvs.html#create-materialized-view'
 
     def help_alter_materialized_view(self):
-        return 'alterMVStmt'
+        return 'mvs.html#alter-materialized-view'
 
     def help_drop_materialized_view(self):
-        return 'dropMVStmt'
+        return 'mvs.html#drop-materialized-view'
 
     def help_keywords(self):
-        return 'appendixA'
+        return 'appendices.html#appendix-a-cql-keywords'
 
     def help_create_user(self):
-        return 'createUserStmt'
+        return 'security.html#create-user'
 
     def help_alter_user(self):
-        return 'alterUserStmt'
+        return 'security.html#alter-user'
 
     def help_drop_user(self):
-        return 'dropUserStmt'
+        return 'security.html#drop-user'
 
     def help_list_users(self):
-        return 'listUsersStmt'
+        return 'security.html#list-users'
 
     def help_create_role(self):
-        return 'createRoleStmt'
+        return 'security.html#create-role'
+
+    def help_alter_role(self):
+        return 'security.html#alter-role'
 
     def help_drop_role(self):
-        return 'dropRoleStmt'
+        return 'security.html#drop-role'
+
+    def help_grant_role(self):
+        return 'security.html#grant-role'
+
+    def help_revoke_role(self):
+        return 'security.html#revoke-role'
 
     def help_list_roles(self):
-        return 'listRolesStmt'
+        return 'security.html#list-roles'
 
     def help_permissions(self):
-        return 'permissions'
+        return 'security.html#permissions'
 
     def help_list_permissions(self):
-        return 'listPermissionsStmt'
+        return 'security.html#list-permissions'
 
-    def help_grant(self):
-        return 'grantRoleStmt'
+    def help_grant_permission(self):
+        return 'security.html#grant-permission'
 
-    def help_revoke(self):
-        return 'revokeRoleStmt'
+    def help_revoke_permission(self):
+        return 'security.html#revoke-permission'
