@@ -1,4 +1,5 @@
 3.11.3
+ * Update cqlsh help to use new docs generated by Sphinx from rst (CASSANDRA-13047)
  * CQL fromJson(null) throws NullPointerException (CASSANDRA-13891)
  * Serialize empty buffer as empty string for json output format (CASSANDRA-14245)
  * Allow logging implementation to be interchanged for embedded testing (CASSANDRA-13396)
